--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div id="game"></div>
 		<script src="game-base.js"></script>
+		<script src="cell.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
