Enhance animation & finish scene 2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<div id="game"></div>
 		<script src="game-base.js"></script>
 		<script src="cell.js"></script>
+		<script src="loader.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
