--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	</head>
 	<body>
 		<div id="game"></div>
+		<div id="hover">
+			<div id="top">
+				<span>She Has Been</span>
+			</div>
+			<div id="middle"></div>
+			<div id="bottom">
+				<span>第二轮次 L 组</span>
+				<span>游创作业</span>
+				<span>刘心苑·刘晓颖·李泊凡·陈天乐·王念一</span>
+			</div>
+		</div>
 		<script src="game-base.js"></script>
 		<script src="cell.js"></script>
 		<script src="loader.js"></script>
