--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="game-base.css" />
 		<link rel="stylesheet" href="cell.css" />
 		<link rel="stylesheet" href="index.css" />
+		<title>She Has Been</title>
 	</head>
 	<body>
 		<div id="game"></div>
